fixed carousel images not showing

--- a/src/stylus/components/_carousel.styl
+++ b/src/stylus/components/_carousel.styl
@@ -26,9 +26,6 @@
     .btn
       color: #FFFFFF
       margin: 0 !important
-      
-      i
-        font-size: 4rem
         
       &:hover
         background: none
@@ -53,7 +50,6 @@
     
     &__item
       color: #FFFFFF
-      width: 10px
       margin: 0 1rem !important
       
       i
